src/test/deca/context/valid/objet/method_ovrlap_class_01.deca
// Description:
//   method name overlap with class name test
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

class A {
    int A() {
    }
}

