src/test/deca/context/invalid/objet/method_already_defined.deca
// Description:
//     Declaration de method de même nom.
//
// Resultats:
//    Error
//
// Historique:
//    cree le 01/01/2023

class A{
    int getX(){

    }
    int getX(){

    }
}


